--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "export NODE_ENV=test&& jasmine",
     "start": "node src/server.js"
   },
-  "author": "",
+  "author": "michellebeauregard",
   "license": "ISC",
   "devDependencies": {
     "jasmine": "^3.0.0",
