--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blocipedia-node",
   "version": "1.0.0",
   "description": "An application that allows users, to create, collaborate, and share wikis.",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "export NODE_ENV=test&& jasmine",
     "start": "node src/server.js"
@@ -14,8 +14,13 @@
     "request": "^2.83.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
   }
 }
