--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -22,6 +22,7 @@
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
+    "dialect": "postgres",
     "logging": false,
 		"operatorsAliases": false,
 		"use_env_variable": "DATABASE_URL"
