--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 megasecret="there is no spoon"
 cookieSecret="oatmeal raisin for the win"
-stripe="sk_test_DcUE3857KHsQZK92eeRge4mO"
+stripeSecret="pk_test_44J8a0sLIAfZdvHCbbH5bcxj"
